# drinkPrepay

./: README.md
drinkPrepay/: README.md  db.sqlite3  pyproject.toml
drinkPrepay/cafe/: admin.py  models.py  urls.py  views.py
drinkPrepay/cafe/migrations/: 0001_initial.py  0002_alter_coffee_status.py  0003_alter_coffee_status.py
drinkPrepay/cafe/templates/cafe/: coffee_list.html
drinkPrepay/core/: settings.py  urls.py
drinkPrepay/customers/: forms.py  urls.py  views.py
drinkPrepay/customers/templates/: _form.html  base.html
drinkPrepay/customers/templates/customers/: login.html  profile.html  register.html
drinkPrepay/redeem/: admin.py  models.py  urls.py  views.py
drinkPrepay/redeem/migrations/: 0001_initial.py
drinkPrepay/templates/: _form.html  _nav.html  base.html
