[tool.poetry]
name = "drinkprepay"
version = "0.1.0"
description = "a drink prepay website"
authors = ["Marcoxu <marco79811@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
ipython = "^8.6.0"
django-extensions = "^3.2.1"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
